# netconfigmaster

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  anotherdemo.py  anotherdemoutput.txt  contact.html  contextdemo.py  contextoutput.txt  contextsimple.py  docker-compose.yml  index.html  nlp_demo.py  nlpdemo.ipynb  preprocessed_data.pt  pyproject.toml  requirements.txt  simpledemo.py  test_phase1.sh
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  auto-assign.yml  dependabot.yml  labeler.yml
.github/workflows/: ci-cd.yml  pr-automation.yml  release.yml  security.yml
configs/: multitask_config.json
data/: README.md  example1.txt  example1.yml  example2.txt  example2.yml  example3.txt  example3.yml  example4.txt  example4.yml
data/training/: analysis_train.yaml  generation_train.yaml  translation_train.yaml
docs/: ARCHITECTURE.md  PROJECT_SUMMARY.md  README.md  USAGE.md
frontend/: README.md  index.html
metrics/: README.md  __init__.py
notebooks/: NLPdemo.ipynb  preprocessed_data.pt
scripts/: build.sh  lint.sh  setup.sh  test.sh
src/: README.md  __init__.py  advanced_sampling.py  data_processing.py  evaluation_metrics.py  multitask_train.py  pretrain.py  training_monitor.py  ui.py  vendor_support.py
tests/: README.md
webapp/: README.md  app.py  requirements.txt
webapp/templates/: image.html  index.html
